[WARP-SPEED] SIC-2166 make WarpCachingManager work without having a warp catalog
(cherry picked from commit 56a50e26b64446c481d674a6321ff6b5b7543eb8)